--- a/package.json
+++ b/package.json
@@ -32,9 +32,8 @@
     "grunt-cli": "~0.1.13",
     "grunt-contrib-coffee": "~0.11.0",
     "grunt-jasmine-node": "~0.2.1",
-    "ink-docstrap": "^0.4.12",
+    "grunt-jsdoc": "~0.5.7",
     "jasmine-node": "~1.14.5",
-    "jsdoc": "~3.3.0-alpha9",
     "nock": "~0.42.1"
   }
 }
