--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "./node_modules/.bin/grunt jasmine_node",
-    "install": "./node_modules/.bin/grunt coffee",
+    "prepublish": "./node_modules/.bin/grunt coffee",
     "start": "node index.js",
     "startprod": "node index.js 'prod'",
     "startdebug": "node index.js 'debug'"
