--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "0.0.1",
   "description": "Get news, filter by score, push to phone",
   "main": "index.js",
+  "precommit": ["lint", "compile", "test"],
   "scripts": {
+    "lint": "./node_modules/.bin/coffeelint src/*",
+    "compile": "./node_modules/.bin/grunt coffee",
     "test": "./node_modules/.bin/grunt jasmine_node",
     "prepublish": "./node_modules/.bin/grunt coffee",
+    "postinstall": "./node_modules/.bin/grunt hookmeup",
     "start": "node index.js",
     "startprod": "node index.js 'prod'",
     "startdebug": "node index.js 'debug'"
@@ -32,12 +36,17 @@
   },
   "devDependencies": {
     "coffee-script": "^1.8.0",
+    "coffeelint": "^1.6.0",
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
+    "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-coffee": "^0.11.1",
     "grunt-jasmine-node": "^0.2.1",
     "grunt-jsdoc": "^0.5.7",
+    "grunt-shell": "^1.1.1",
     "jasmine-node": "^1.14.5",
-    "nock": "^0.46.0"
+    "jshint": "^2.5.5",
+    "nock": "^0.46.0",
+    "precommit-hook": "latest"
   }
 }
