--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "0.0.1",
   "description": "Get news, filter by score, push to phone",
   "main": "index.js",
-  "precommit": ["lint", "compile", "test"],
+  "precommit": [
+    "lint",
+    "compile",
+    "test"
+  ],
   "scripts": {
     "lint": "./node_modules/.bin/coffeelint src/*",
     "compile": "./node_modules/.bin/grunt coffee",
@@ -29,8 +33,10 @@
   },
   "homepage": "https://github.com/iconix/tn",
   "dependencies": {
+    "bunyan": "^1.1.0",
     "cli-color": "^0.3.2",
     "instapush": "0.0.7",
+    "loggly": "^1.0.5",
     "nconf": "^0.6.9",
     "node-persist": "0.0.2"
   },
