--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "instapush": "0.0.7",
     "loggly": "^1.0.5",
     "nconf": "^0.6.9",
-    "node-persist": "0.0.2"
+    "node-persist": "0.0.2",
+    "node-uuid": "^1.4.1"
   },
   "devDependencies": {
     "coffee-script": "^1.8.0",
