Start replacing my custom logging module with Node-Bunyan

--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   "scripts": {
     "lint": "./node_modules/.bin/coffeelint src/*",
     "compile": "./node_modules/.bin/grunt coffee",
-    "test": "./node_modules/.bin/grunt jasmine_node",
+    "test": "./node_modules/.bin/grunt jasmine_node | node_modules/.bin/bunyan",
     "prepublish": "npm run compile",
     "postinstall": "./node_modules/.bin/grunt hookmeup",
-    "start": "node index.js",
+    "start": "node index.js | node_modules/.bin/bunyan",
     "startprod": "./node_modules/.bin/forever start index.js 'prod'",
     "startdebug": "./node_modules/.bin/forever start index.js 'debug'"
   },
@@ -34,7 +34,6 @@
   "homepage": "https://github.com/iconix/tn",
   "dependencies": {
     "bunyan": "^1.1.0",
-    "cli-color": "^0.3.2",
     "forever": "^0.11.1",
     "instapush": "0.0.7",
     "loggly": "^1.0.5",
