--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "prepublish": "npm run compile",
     "postinstall": "./node_modules/.bin/grunt hookmeup",
     "start": "node index.js | node_modules/.bin/bunyan",
-    "startprod": "./node_modules/.bin/forever start index.js 'prod'",
-    "startdebug": "./node_modules/.bin/forever start index.js 'debug'"
+    "startprod": "./node_modules/.bin/forever start index.js prod",
+    "startdebug": "./node_modules/.bin/forever start index.js debug"
   },
   "repository": {
     "type": "git",
