--- a/deploy/package.json
+++ b/deploy/package.json
@@ -5,7 +5,7 @@
   "main": "hook.js",
   "scripts": {
     "start": "./node_modules/.bin/forever -a start hook.js",
-    "restart": "./node_modules/.bin/forever -a restart hook.js",
+    "re-start": "./node_modules/.bin/forever -a restart hook.js",
     "stop": "./node_modules/.bin/forever stop hook.js"
   },
   "repository": {
