--- a/deploy/package.json
+++ b/deploy/package.json
@@ -4,8 +4,8 @@
   "description": "GitHub WebHooks + Gith = Automatic Deployments",
   "main": "hook.js",
   "scripts": {
-    "start": "./node_modules/.bin/forever -a start hook.js",
-    "re-start": "./node_modules/.bin/forever -a restart hook.js",
+    "start": "./node_modules/.bin/forever -a -l deploy.log start hook.js",
+    "re-start": "./node_modules/.bin/forever -a -l deploy.log restart hook.js",
     "stop": "./node_modules/.bin/forever stop hook.js"
   },
   "repository": {
